# python-md-parser

./: .gitignore  README.md  pyproject.toml
src/: error_classes.py
src/techroot_lesson_parser/: __init__.py  builder.py  cli.py  content_tree.py  manifest.py  models.py  parser.py  validator.py
tests/: test_builder.py  test_content_tree.py  test_detect_dependencies.py  test_manifest.py  test_parsers.py  test_validator.py
tests/fixtures/invalid/: lesson.md  missing-id.md
tests/fixtures/valid/tier-1-interface/: _chapter.yaml
tests/fixtures/valid/tier-1-interface/01-first-command/: lesson.md
tests/fixtures/valid/tier-1-interface/01-terminal-basics/02-navigating-files/: lesson.md
